add getAllModerateQuests
